tolk-tester/tests/invalid-typing/err-6722.tolk
import "@cur_folder/../imports/./has-tinf-err"

/**
@path_mapping @cur_folder={DIR}
@compilation_should_fail
@stderr imports/has-tinf-err.tolk:3:18
@stderr can not assign `string` to variable of type `int`
 */
